--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,5 +1,5 @@
 <footer>
-    <p style="text-align: center;">Designed with <span style="color: #ff5e78;"><i class="fas fa-heart"></i></span> by Ravi Mahar</p>
+    <p style="text-align: center;">Designed with <span style="color: #ff5e78;"><i class="fas fa-heart"></i></span> by <a href="https://ravimahar.herokuapp.com" target="_blank">Ravi Mahar</a></p>
 </footer>
 <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
